# aether

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  aether.yml  hydra_info.md  pyproject.toml  requirements.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
archive/content/: data_paths.json
archive/notebooks/: Collect tabular data.ipynb  Geoclip.ipynb  tmp.tif
archive/src/: data_utils.py  gee_utils.py  loadpaths.py
configs/: train.yaml  train_alignment.yaml
configs/callbacks/: default.yaml
configs/data/: butterfly_coords.yaml  butterfly_coords_text.yaml  butterfly_datamodule.yaml  butterfly_s2_rgb.yaml
configs/experiment/: alignment.yaml  prediction.yaml
configs/geoclip_alignment/: predictive_geoclip.yaml
configs/logger/: wandb.yaml
configs/model/: geoclip_alignment.yaml  predictive_geoclip.yaml
configs/paths/: default.yaml  local.yaml  shared.yaml
configs/trainer/: ddp_sim.yaml  default.yaml
data/caption_templates/: butterfly.json  corine_classes.csv
data/model_ready/: s2bms_presence_with_aux_data.csv
data/source/: bioclim_classes.json  corine_classes.json
data/source/butterflies/: s2bms_bioclim_lc_data.csv
data/splits/: split_indices_s2bms_2024-08-14-1459.pth
notebooks/: 01-GT-base-dataset.ipynb  02-GT-text-encoding.ipynb  02-TvdP-create-butterfly-aux-data.ipynb  03-TvdP-load-butterfly-data.ipynb  Collect tabular data.ipynb
scripts/: schedule.sh
src/: data_utils.py  eval.py  gee_utils.py  train.py
src/data/: base_caption_builder.py  base_datamodule.py  base_dataset.py  butterfly_caption_builder.py  butterfly_dataset.py  collate_fns.py  utils.py
src/data/components/: base_datasets.py  butterfly_dataset.py  captions.py
src/data_preprocessing/: create_aux_data.py  data_utils.py  gee_utils.py
src/models/: base_model.py  predictive_model.py  text_alignment_model.py
src/models/components/: collate_fns.py
src/utils/: errors.py  logging_utils.py  pylogger.py  utils.py
tests/: conftest.py  test_configs.py  test_datamodules.py  test_sweeps.py  test_train.py
tests/helpers/: run_sh_command.py
(+16 files in other folders)
