[project]
name = "aether"
version = '1.0'
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.6.0",
    "torch>=2.9.1",
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",
    "torchvision>=0.24.1",
    "torchaudio>=2.9.1",
    "rootutils>=1.0.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "geoclip>=1.2.0",
    "wandb>=0.23.1",
]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
